--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,17 +1,20 @@
-version: "2"
-
+version: 2
 run:
   concurrency: 4
   timeout: 1m
   issues-exit-code: 1
-
 output:
   show-stats: false
 
 linters:
+  exclusions:
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
   enable:
     - errcheck
-    - gosimple
     - govet
     - ineffassign
     - staticcheck
